--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "#The function behind the scenes in neuronal.PSP_fit\n",
     "\n",
-    "def PSP_fit(x, y, nsamples, initial_guess, plot=True):\n",
+    "def psp_fit(x, y, nsamples, initial_guess, plot=True):\n",
     "    \"\"\"\n",
     "    Uses pymc3 to calculate the trace for the PSP model. In this particular model, we assume a single PSP peak and\n",
     "    a constant baseline.\n",
@@ -127,8 +127,8 @@
     "        Input voltage data in mV\n",
     "    nsamples : integer\n",
     "        Number of samples for pymc3 calculation\n",
-    "    initial_guess : list\n",
-    "        List of initial guesses for the parameters of the model\n",
+    "    initial_guess : dictionary\n",
+    "        Dictionary of initial guesses for the parameters of the model\n",
     "    plot : boolean\n",
     "        Plots of the marginal distributions of the estimated parameters (plotted when True)\n",
     "    \"\"\"\n",
@@ -227,7 +227,7 @@
    "source": [
     "#Perform parameter estimation\n",
     "initial_guess = {'b': -30.39, 'a1': 0.3, 't1': 451.43, 'tau_d1': 0.01, 'tau_r1': 0.001}\n",
-    "sample = neuronal.PSP_fit(x, y, 2000, initial_guess)"
+    "sample = neuronal.psp_fit(x, y, 2000, initial_guess)"
    ]
   },
   {
