Created NeuronalData class for data I/O and added unit tests

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "$$y_t = \\sum_{i=1}^{n} a_i f_i(t - t_i) + b + \\epsilon_t$$\n",
     "\n",
-    "$$f_i(t) = (\\exp^{-t / \\tau_i^d} - \\exp^{-t / \\tau_i^r}) \\: \\text{for} \\: t \\ge 0$$ \n",
+    "$$f_i(t) = (\\exp(-t / \\tau_i^d) - \\exp(-t / \\tau_i^r)) \\: \\text{for} \\: t \\ge 0$$ \n",
     "\n",
     "$$\\epsilon_t = \\sum_{j=1}^{p} \\phi_j \\epsilon_{t-j} + u_t , \\: u_t \\approx N(0, \\sigma^2)$$ \n",
     "\n",
@@ -180,7 +180,7 @@
     "#our package import\n",
     "import neuronal\n",
     "\n",
-    "test_data = neuronal.loadtxt('single_PSP_data.txt')\n",
+    "test_data = neuronal.('single_PSP_data.txt')\n",
     "\n",
     "#1st row corresponds to Time (s), 2nd row corresponds to Voltage (mV)\n",
     "x = test_data[0, :]\n",
@@ -420,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
