Organized tutorial sections, added descriptions of parameters

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -111,7 +111,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's import the data using a NeuronalData object. This stores the imported data in a pandas DataFrame under columns T (time) and V (voltage signal)."
+    "## Importing Data\n",
+    "\n",
+    "Let's import the data using a NeuronalData object. This stores the imported data in a pandas DataFrame under columns T (time) and V (voltage signal).\n",
+    "\n",
+    "The user may specify any file path pointing to correctly-formatted data, but in this case we will use the example data provided with the package. num_psp, the number of PSPs in the data, should also be specified at import."
    ]
   },
   {
@@ -144,6 +148,24 @@
     "plt.xlabel('Time (s)')\n",
     "plt.ylabel('Voltage (mV)')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Parameter estimation\n",
+    "\n",
+    "psp_fit performs Hamiltonian MC parameter estimation using a NUTS sampler. This converges best when a reasonable initial guess is supplied.\n",
+    "\n",
+    "| Parameter | Description |\n",
+    "|------|------|\n",
+    "| b | constant baseline value |\n",
+    "| sigma | width of Gaussian noise |\n",
+    "| a0, a1, a2 etc. | amplitude of each PSP |\n",
+    "| t_psp0, t_psp1 etc. | start time of each PSP |\n",
+    "| tau_d0, tau_d1 etc. | decay time constant of each PSP |\n",
+    "| tau_r0, tau_r1 etc. | rise time constant of each PSP |"
    ]
   },
   {
@@ -322,6 +344,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -348,6 +377,8 @@
    "metadata": {},
    "source": [
     "It appears like our simplest model works when the baseline is reasonably flat and when the only signal present is a PSP signal.\n",
+    "\n",
+    "## Example: Multiple PSPs\n",
     "\n",
     "Now, let's see if our simplest model can work for multiple PSP peaks when the baseline is reasonably flat."
    ]
@@ -674,7 +705,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our simplest model fits reasonably well, but for the last peak, our estimate has a higher peak amplitude than the actual peak. To improve our model further, we will modify our model by changing the baseline after each spike (to be continued...)"
+    "Our simplest model fits reasonably well, but for the last peak, our estimate has a higher peak amplitude than the actual peak. In future updates, we will modify our model by changing the baseline after each spike."
    ]
   },
   {
@@ -701,7 +732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
