updated description of the tutorial

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -37,21 +37,21 @@
     "\n",
     "$t_i \\equiv \\text{spike time of} \\: i^{th} \\: \\text{PSP}$, \n",
     "\n",
-    "$n \\equiv \\text{number of PSP's}$, \n",
+    "$n \\equiv \\text{number of PSPs}$, \n",
     "\n",
     "$b \\equiv \\text{constant baseline}$, \n",
     "\n",
-    "$f_i(t) \\equiv \\text{mathematical trial function of PSP}$, \n",
+    "$f_i(t') \\equiv \\text{mathematical trial function of PSP}$, \n",
     "\n",
     "$\\epsilon_t \\equiv \\text{general AR(p) autoregressive model of the noise}$, \n",
     "\n",
-    "$u_t \\equiv \\text{Gaussian noise}$, \n",
+    "$u_t \\equiv \\text{Gaussian i.i.d. noise}$, \n",
     "\n",
-    "$\\tau_i^d \\equiv \\text{decay time constant}$, \n",
+    "$\\tau_i^d \\equiv \\text{decay time constant of} \\: i^{th} \\: \\text{PSP}$, \n",
     "\n",
-    "$\\tau_i^r \\equiv \\text{rise time constant}$, \n",
+    "$\\tau_i^r \\equiv \\text{rise time constant of} \\: i^{th} \\: \\text{PSP}$, \n",
     "\n",
-    "$a_i \\equiv \\text{constant related to the peak amplitude of each PSP}$\n",
+    "$a_i \\equiv \\text{constant related to the peak amplitude for} \\: i^{th} \\: \\text{PSP}$\n",
     "\n",
     "\n",
     "## Our Generative Model for PSP's\n",
@@ -61,49 +61,51 @@
     "$$y_t = H(t_1 - t) \\cdot (b_{start} + \\frac{b_1 - b_{start}}{t_1 - t_{start}} \\cdot (t - t_{start})) \\: + $$ \n",
     "\n",
     "$$\\sum_{i=1}^{n-1} H(t - t_i) \\cdot (a_i f_i(t - t_i) + H(t_{i+1} - t) \\cdot \\frac{b_{i+1} - b_{i}}{t_{i+1} - t_i} \\cdot (t - t_i)) \\: +$$\n",
-    "$$H(t - t_{n}) \\cdot (b_{n} + \\frac{b_{end} - b_n}{t_{end} - t_{n}} \\cdot (t - t_{n}))) + \\epsilon_t$$\n",
+    "$$H(t - t_{n}) \\cdot (b_{n} + \\frac{b_{end} - b_n}{t_{end} - t_{n}} \\cdot (t - t_{n})) + \\epsilon_t$$\n",
     "\n",
-    "$$\\text{where} \\: H(x) \\equiv \\text{Heaviside step function} \\: (H(x \\ge 0) = 1 \\: \\text{and} \\: H(x < 0) = 0)$$\n",
+    "$H(x) \\equiv \\text{Heaviside step function such that} \\: H(x \\ge 0) = 1 \\: \\text{and} \\: H(x < 0) = 0$\n",
     "\n",
-    "$$f_i(t') = \\exp(-t' / \\tau_i^d) - \\exp(-t' / \\tau_i^r) \\: \\text{for} \\: t' \\ge 0$$ \n",
+    "$f_i(t') = \\exp(-t' / \\tau_i^d) - \\exp(-t' / \\tau_i^r) \\: \\text{for} \\: t' \\ge 0$\n",
     "\n",
-    "$$\\text{and} \\: \\epsilon_t \\approx N(0, \\sigma^2)$$ \n",
+    "$\\epsilon_t \\approx N(0, \\sigma^2)$\n",
     "\n",
     "$\\text{where}$ \n",
     "\n",
     "$y_t \\equiv \\text{observed voltage trace}$,\n",
     "\n",
-    "$t_{start} \\equiv \\text{start time of the data}$,\n",
-    "\n",
-    "$t_{end} \\equiv \\text{end time of the data}$\n",
-    "\n",
-    "$t_i \\equiv \\text{spike time of} \\: i^{th} \\: \\text{PSP}$, \n",
-    "\n",
-    "$n \\equiv \\text{number of PSP's}$, \n",
-    "\n",
-    "$b_{start} \\equiv \\text{voltage of the baseline at} \\: t_{start}$,\n",
-    "\n",
-    "$b_i \\equiv \\text{voltage of the baseline at} \\: i^{th} \\: \\text{PSP spike time}$, \n",
-    "\n",
-    "$b_{end} \\equiv \\text{voltage of the baseline at} \\: t_{end}$,\n",
-    "\n",
-    "$f_i(t) \\equiv \\text{mathematical trial function of PSP}$, \n",
+    "$f_i(t') \\equiv \\text{mathematical trial function of} \\: i^{th} \\: \\text{PSP}$,\n",
     "\n",
     "$\\epsilon_t \\equiv \\text{Gaussian i.i.d. noise}$, \n",
     "\n",
-    "$\\tau_i^d \\equiv \\text{decay time constant}$, \n",
+    "$\\sigma \\equiv \\text{standard deviation of the Gaussian i.i.d. noise}$\n",
     "\n",
-    "$\\tau_i^r \\equiv \\text{rise time constant}$, \n",
+    "$t_{start} \\equiv \\text{start time of the voltage trace}$,\n",
     "\n",
-    "$a_i \\equiv \\text{constant related to the peak amplitude of each PSP}$\n",
+    "$t_{end} \\equiv \\text{end time of the voltage trace}$\n",
     "\n",
-    "By differentiating $f_i(t)$ with respect to $t$, we find that the maximum of the signal occurs at $t_i = t_i^*$:\n",
+    "$t_i \\equiv \\text{spike time of} \\: i^{th} \\: \\text{PSP}$, \n",
     "\n",
-    "$$t_i^* = \\frac{ln(\\tau_i^d / \\tau_i^r)}{1 / \\tau_i^r - 1 / \\tau_i^d}$$\n",
+    "$n \\equiv \\text{number of PSPs}$, \n",
+    "\n",
+    "$b_{start} \\equiv \\text{voltage of the baseline at} \\: t_{start}$,\n",
+    "\n",
+    "$b_i \\equiv \\text{voltage of the baseline at} \\: t_i$, \n",
+    "\n",
+    "$b_{end} \\equiv \\text{voltage of the baseline at} \\: t_{end}$,\n",
+    "\n",
+    "$\\tau_i^d \\equiv \\text{decay time constant of} \\: i^{th} \\: \\text{PSP}$, \n",
+    "\n",
+    "$\\tau_i^r \\equiv \\text{rise time constant of} \\: i^{th} \\: \\text{PSP}$, \n",
+    "\n",
+    "$a_i \\equiv \\text{constant related to the peak amplitude of} \\: i^{th} \\: \\text{PSP}$\n",
+    "\n",
+    "By differentiating $f_i(t')$ with respect to $t'$, we find that the maximum of the signal occurs at $t_i = t_i^{max}$:\n",
+    "\n",
+    "$$t_i^{max} = \\frac{ln(\\tau_i^d / \\tau_i^r)}{1 / \\tau_i^r - 1 / \\tau_i^d}$$\n",
     "\n",
     "Then, \n",
     "\n",
-    "$$a_i^{peak} = a_i \\cdot f_i(t^*) - \\frac{b_{i+1} - b_{i}}{t_{i+1} - t_i} \\cdot (t^* - t_i))$$\n",
+    "$$a_i^{peak} = a_i \\cdot f_i(t^*) - \\frac{b_{i+1} - b_{i}}{t_{i+1} - t_i} \\cdot (t^{max} - t_i)$$\n",
     "\n",
     "In order for our model to be successful, we need to somehow account for the following noise sources:\n",
     "\n",
@@ -115,13 +117,7 @@
     "\n",
     "$$ p(Y|\\Theta) = \\prod_{t=1}^{T} \\frac{1}{\\sqrt{2\\pi\\sigma^2}}\\exp\\left(-\\frac{(y_t-\\hat{y_t})^2}{2\\sigma^2}\\right)$$\n",
     "\n",
-    "where $\\hat{y_t}$ refers to the predicted noiseless trace:\n",
-    "\n",
-    "$$\\hat{y_t} = H(t_1 - t) \\cdot (b_{start} + \\frac{b_1 - b_{start}}{t_1 - t_{start}} \\cdot (t - t_{start})) \\: + $$\n",
-    "\n",
-    "$$\\sum_{i=1}^{n-1} H(t - t_i) \\cdot (a_i f_i(t - t_i) + H(t_{i+1} - t) \\cdot \\frac{b_{i+1} - b_{i}}{t_{i+1} - t_i} \\cdot (t - t_i))$$\n",
-    "\n",
-    "$$+ \\: H(t - t_{n}) \\cdot (b_{n} + \\frac{b_{end} - b_n}{t_{end} - t_{n}} \\cdot (t - t_{n}))$$\n",
+    "where $\\hat{y_t}$ refers to the predicted noiseless trace $y_t - \\epsilon_t$\n",
     "\n",
     "Given this model, the log likelihood function is:\n",
     "\n",
@@ -130,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +286,7 @@
       "Initializing NUTS using jitter+adapt_diag...\n",
       "Multiprocess sampling (2 chains in 2 jobs)\n",
       "NUTS: [tau_r, tau_d, t_psp, a, sigma, b, b_end, b_start]\n",
-      "Sampling 2 chains: 100%|██████████| 1000/1000 [02:33<00:00,  4.91draws/s]\n",
+      "Sampling 2 chains: 100%|██████████| 1000/1000 [04:14<00:00,  2.19draws/s]\n",
       "The acceptance probability does not match the target. It is 0.9640756307286262, but should be close to 0.8. Try to increase the number of tuning steps.\n",
       "There were 3 divergences after tuning. Increase `target_accept` or reparameterize.\n",
       "The acceptance probability does not match the target. It is 0.9514417164204162, but should be close to 0.8. Try to increase the number of tuning steps.\n",
@@ -325,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -406,10 +402,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x21cb93e3a90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2146d633390>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -500,6 +496,13 @@
    "metadata": {},
    "source": [
     "It is important that we don't cut down the data excessively so that our result from parameter estimation leads to a sensible fit with the original data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's see if reduced data leads to a sensible estimate of the parameters."
    ]
   },
   {
@@ -605,7 +608,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, the marginal distributions of our parameters became broader. However, the parameter estimates from the reduced data agree with those from the original data within the 68% credible interval range."
+    "As you can see, the marginal distributions of our parameters became broader; in other words, our uncertainty range is now greater for the parameters. Nevertheless, the parameter estimates from the reduced data agree with those from the original data within the 68% credible interval range. Hence the estimate parameters seem to be reasonable."
    ]
   },
   {
@@ -841,7 +844,7 @@
     "                                            b_end_simulate, a_simulate, t_psp_simulate, tau_d_simulate,\n",
     "                                            tau_r_simulate, t_range_simulate, step_simulate)\n",
     "\n",
-    "#Same set of initial guess as above\n",
+    "#Same set of initial guess as what we used for above pymc3 calculations\n",
     "sigma_guess = 0.026\n",
     "b_start_guess = -32.19\n",
     "b_guess = [-32.17, -32.07]\n",
