fixed typos for model description in the tutorial

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -60,8 +60,8 @@
     "\n",
     "$$y_t = H(t_1 - t) \\cdot (b_{start} + \\frac{b_1 - b_{start}}{t_1 - t_{start}} \\cdot (t - t_{start})) \\: + $$ \n",
     "\n",
-    "$$\\sum_{i=1}^{n-1} H(t - t_i) \\cdot (a_i f_i(t - t_i) + H(t_{i+1} - t) \\cdot \\frac{b_{i+1} - b_{i}}{t_{i+1} - t_i} \\cdot (t - t_i)) \\: +$$\n",
-    "$$H(t - t_{n}) \\cdot (b_{n} + \\frac{b_{end} - b_n}{t_{end} - t_{n}} \\cdot (t - t_{n})) + \\epsilon_t$$\n",
+    "$$\\sum_{i=1}^{n-1} H(t - t_i) \\cdot (a_i f_i(t - t_i) + H(t_{i+1} - t) \\cdot (b_i + \\frac{b_{i+1} - b_{i}}{t_{i+1} - t_i} \\cdot (t - t_i))) \\: +$$\n",
+    "$$H(t - t_{n}) \\cdot (a_n f_n(t - t_n) + b_{n} + \\frac{b_{end} - b_n}{t_{end} - t_{n}} \\cdot (t - t_{n})) + \\epsilon_t$$\n",
     "\n",
     "$H(x) \\equiv \\text{Heaviside step function such that} \\: H(x \\ge 0) = 1 \\: \\text{and} \\: H(x < 0) = 0$\n",
     "\n",
